--- a/table.html
+++ b/table.html
@@ -75,7 +75,13 @@
         </tr>
 
         
+<tr>
+    <td>Wednesday</td>
+    <td>8.00 am</td>
+    <td>12.00 pm</td>
+    <td colspan="3">XSL Formating Objects</td>
 
+</tr>
 
 
     </table>
